# microservices/contracts/http/admin.openapi.json
@@ -2768,6 +2768,29 @@
         "required": [],
         "additionalProperties": false
       },
+      "JobRepost": {
+        "type": "object",
+        "properties": {
+          "timeEnd": {
+            "anyOf": [
+              {
+                "type": "integer",
+                "minimum": 1,
+                "maximum": 8640000000000000
+              },
+              {
+                "type": "string",
+                "pattern": "^[1-9][0-9]{0,15}$",
+                "format": "jobfind-id"
+              }
+            ]
+          }
+        },
+        "required": [
+          "timeEnd"
+        ],
+        "additionalProperties": false
+      },
       "JobCreate": {
         "type": "object",
         "properties": {
